<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020 VarTmp7
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_organizations">


    <fragment
        android:id="@+id/navigation_organizations"
        android:name="com.vartmp7.stalker.ui.organizations.OrganizationsFragment"
        android:label="@string/organizzazioni"
        tools:layout="@layout/fragment_organizations">

        <action
            android:id="@+id/action_navigation_organizations_to_navigation_tracking"
            app:destination="@id/navigation_tracking" />
        <argument android:name="repo" />
    </fragment>
    <fragment
        android:id="@+id/navigation_tracking"
        android:name="com.vartmp7.stalker.ui.tracking.TrackingFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_tracking">

    </fragment>

    <fragment
        android:id="@+id/navigation_preferiti"
        android:name="com.vartmp7.stalker.ui.favorite.FavoritesFragment"
        android:label="@string/preferiti"
        tools:layout="@layout/fragment_preferiti" >

        <action
            android:id="@+id/action_navigation_preferiti_to_navigation_tracking"
            app:destination="@id/navigation_tracking" />
    </fragment>
    <fragment
        android:id="@+id/navigation_cronologia"
        android:name="com.vartmp7.stalker.ui.history.HistoryFragment"
        android:label="@string/cronologia"
        tools:layout="@layout/fragment_cronologia" />
</navigation>
